refactor methods about check permissions and user info when noauth active